--- a/packages/core/devtools/package.json
+++ b/packages/core/devtools/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18.0.0",
     "rimraf": "^3.0.0",
     "serve": "^14.2.4",
+    "tinybench": "^4.0.1",
     "ts-loader": "^7.0.4",
     "ts-node": "9.1.1",
     "ts-node-dev": "1.1.8",
