--- a/packages/plugins/@nocobase/plugin-async-task-manager/package.json
+++ b/packages/plugins/@nocobase/plugin-async-task-manager/package.json
@@ -11,5 +11,8 @@
     "@nocobase/plugin-error-handler": "1.x",
     "@nocobase/server": "1.x",
     "@nocobase/test": "1.x"
+  },
+  "dependencies": {
+    "p-queue": "^8.1.0"
   }
 }
