feat(cli): add benchmark script (#6623)
* feat(cli): add benchmark script

* chore(cli): remove useless code

* fix(plugin-workflow): fix validate logic

* chore(package): remove package manager

* fix(cli): fix glob

* fix(cli): change to fast-glob

* fix(plugin-workflow): add dependency

* fix(build): change server build target to node

* test(build): change ncc build target to es2023

* fix: tinybench

---------

Co-authored-by: chenos <chenlinxh@gmail.com>

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "e2e": "nocobase e2e",
     "ts": "nocobase test:server",
     "tc": "nocobase test:client",
+    "benchmark": "nocobase benchmark",
     "doc": "nocobase doc",
     "doc:cn": "nocobase doc --lang=zh-CN",
     "postinstall": "nocobase postinstall",
