--- a/packages/plugins/@nocobase/plugin-workflow/package.json
+++ b/packages/plugins/@nocobase/plugin-workflow/package.json
@@ -28,7 +28,8 @@
     "react-i18next": "^11.15.1",
     "react-js-cron": "^3.1.0",
     "react-router-dom": "^6.11.2",
-    "sequelize": "^6.26.0"
+    "sequelize": "^6.26.0",
+    "tinybench": "4.x"
   },
   "peerDependencies": {
     "@nocobase/actions": "1.x",
