--- a/packages/plugins/@nocobase/plugin-async-task-manager/package.json
+++ b/packages/plugins/@nocobase/plugin-async-task-manager/package.json
@@ -12,7 +12,7 @@
     "@nocobase/server": "1.x",
     "@nocobase/test": "1.x"
   },
-  "devDependencies": {
-    "p-queue": "^8.1.0"
+  "dependencies": {
+    "p-queue": "^6.6.2"
   }
 }
