--- a/packages/plugins/@nocobase/plugin-ai/package.json
+++ b/packages/plugins/@nocobase/plugin-ai/package.json
@@ -14,13 +14,15 @@
   },
   "devDependencies": {
     "@ant-design/x": "^1.1.0",
-    "@langchain/core": "^0.3.39",
+    "@langchain/core": "^0.3.55",
     "@langchain/deepseek": "^0.0.1",
     "@langchain/openai": "^0.4.3",
     "nodejs-snowflake": "^2.0.1",
     "use-context-selector": "^2.0.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
-    "@langchain/google-genai": "^0.2.5"
+    "@langchain/google-genai": "^0.2.5",
+    "@langchain/anthropic": "^0.3.20",
+    "@langchain/community": "^0.3.42"
   }
 }
