--- a/packages/plugins/@nocobase/plugin-data-source-manager/package.json
+++ b/packages/plugins/@nocobase/plugin-data-source-manager/package.json
@@ -14,6 +14,9 @@
     "@nocobase/server": "1.x",
     "@nocobase/test": "1.x"
   },
+  "devDependencies": {
+    "@dnd-kit/core": "^5.0.1"
+  },
   "keywords": [
     "Data model tools"
   ],
