--- a/packages/plugins/@nocobase/plugin-ai/package.json
+++ b/packages/plugins/@nocobase/plugin-ai/package.json
@@ -22,7 +22,6 @@
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "@langchain/google-genai": "^0.2.5",
-    "@langchain/anthropic": "^0.3.20",
-    "@langchain/community": "^0.3.42"
+    "@langchain/anthropic": "^0.3.20"
   }
 }
