--- a/packages/plugins/@nocobase/plugin-ai/package.json
+++ b/packages/plugins/@nocobase/plugin-ai/package.json
@@ -22,6 +22,11 @@
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "@langchain/google-genai": "^0.2.5",
-    "@langchain/anthropic": "^0.3.20"
+    "@langchain/anthropic": "^0.3.20",
+    "echarts": "^5.5.0",
+    "echarts-for-react": "3.0.2",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1"
   }
 }
