--- a/packages/plugins/@nocobase/plugin-ai/package.json
+++ b/packages/plugins/@nocobase/plugin-ai/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@nocobase/plugin-ai",
-  "displayName": "AI integration",
-  "displayName.zh-CN": "AI 集成",
-  "description": "Support integration with AI services, providing AI-related workflow nodes to enhance business processing capabilities.",
-  "description.zh-CN": "支持接入 AI 服务，提供 AI 相关的工作流节点，增强业务处理能力。",
+  "displayName": "AI employees",
+  "displayName.zh-CN": "AI 员工",
+  "description": "Support configuring AI employees for different roles. Empowered by LLMs and workflows to assist with daily business tasks.",
+  "description.zh-CN": "支持配置不同岗位的 AI 员工，结合大语言模型 (LLM) 和工作流，辅助用户完成日常业务工作。",
   "version": "1.7.0-alpha.13",
   "main": "dist/server/index.js",
   "peerDependencies": {
