--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -32,7 +32,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./docker/nocobase
-          file: Dockerfile-cn
+          file: ./docker/nocobase/Dockerfile-cn
           build-args: |
             CNA_VERSION=latest
           platforms: linux/amd64,linux/arm64
