--- a/docker/nocobase/Dockerfile-cn
+++ b/docker/nocobase/Dockerfile-cn
@@ -55,19 +55,14 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 RUN rm -rf /etc/nginx/sites-enabled/default
 COPY --from=builder /app/nocobase.tar.gz /app/nocobase.tar.gz
-RUN wget --no-check-certificate -O /opt/libreoffice24.8.zip https://static-docs.nocobase.com/libreoffice24.8.zip
 
+RUN wget --no-check-certificate -O /opt/libreoffice24.8.zip https://static-docs.nocobase.com/libreoffice24.8.zip
+RUN wget --no-check-certificate -O /opt/instantclient_19_25.zip https://download.oracle.com/otn_software/linux/instantclient/1925000/instantclient-basic-linux.x64-19.25.0.0.0dbru.zip \
 RUN wget --no-check-certificate https://downloads.mysql.com/archives/get/p/23/file/mysql-community-client-core_8.0.39-1debian12_amd64.deb && \
   dpkg -x mysql-community-client-core_8.0.39-1debian12_amd64.deb /tmp/mysql-client && \
   cp /tmp/mysql-client/usr/bin/mysqldump /usr/bin/ && \
   cp /tmp/mysql-client/usr/bin/mysql /usr/bin/ && \
   rm mysql-community-client-core_8.0.39-1debian12_amd64.deb
-
-# RUN wget --no-check-certificate --quiet https://download.oracle.com/otn_software/linux/instantclient/1925000/instantclient-basic-linux.x64-19.25.0.0.0dbru.zip \
-#   && unzip instantclient-basic-linux.x64-19.25.0.0.0dbru.zip -d /opt/ \
-#   && echo "/opt/instantclient_19_25" > /etc/ld.so.conf.d/oracle-instantclient.conf \
-#   && ldconfig \
-#   && rm instantclient-basic-linux.x64-19.25.0.0.0dbru.zip
 
 WORKDIR /app/nocobase
 
